some gap fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
 
 .slider-img-1{
     background-image: linear-gradient(180deg, #111111 0%, rgba(17, 17, 17, 0) 100%), url('../images/slider-1.jpg');
-    height: 60vh;
+    height: 70vh;
     background-size: cover;
     border-radius: 5px;
     background-repeat: no-repeat;
@@ -22,7 +22,7 @@
 }
 .slider-img-2{
     background-image: linear-gradient(180deg, #111111 0%, rgba(17, 17, 17, 0) 100%), url('../images/slider-2.jpg');
-    height: 60vh;
+    height: 70vh;
     background-size: cover;
     border-radius: 5px;
     background-repeat: no-repeat;
@@ -30,7 +30,7 @@
 }
 .slider-img-3{
     background-image: linear-gradient(180deg, #111111 0%, rgba(17, 17, 17, 0) 100%), url('../images/slider-3.jpg');
-    height: 60vh;
+    height: 70vh;
     background-size: cover;
     border-radius: 5px;
     background-repeat: no-repeat;
